@@ -8,6 +8,11 @@
 <h2>Introduction</h2>
 
 
+<p><strong>These tasks are deprecated and will be removed in a future
+release of Ant.  They are now part of the <a
+href="http://ant.apache.org/antlibs/proper.html">.NET
+Antlib</a>.</strong></p>
+
 Ant support for .NET goes back to before .NET was released, and
 continues to be expanded based on user demand. Users writing nothing but
 a .NET application, may want to look at the .NET-based
