@@ -16,7 +16,7 @@
 <a href="conceptstypeslist.html" target="navFrame">Concepts and Types</a><br>
 
 <h3>Optional Tasks</h3>
-<a href="OptionalTasks/dotnet.html">.NET Tasks</a><br>
+<a href="OptionalTasks/dotnet.html"><i>.NET Tasks</i></a><br>
 <a href="OptionalTasks/antlr.html">ANTLR</a><br>
 <a href="OptionalTasks/attrib.html">Attrib</a><br>
 <a href="OptionalTasks/cab.html">Cab</a><br>
