@@ -345,6 +345,9 @@ public class Ildasm extends Task {
      * @throws BuildException
      */
     public void execute() throws BuildException {
+        log("This task is deprecated and will be removed in a future version\n"
+            + "of Ant.  It is now part of the .NET Antlib:\n"
+            + "http://ant.apache.org/antlibs/proper.html", Project.MSG_ERR);
         validate();
         if (!isDisassemblyNeeded()) {
             return;
